force-app/main/default/objects/Selfie__c/Selfie__c.object-meta.xml
<CustomObject>
    <label>Selfie</label>
    <nameField>
        <label>Selfie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selfies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>