force-app/main/default/objects/Selfie__c/fields/Created_Hour_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Created_Hour_of_Day__c</fullName>
    <description>Sortable year, month, date, and hour</description>
    <formula
  >TEXT(YEAR(DATEVALUE(CreatedDate - 0.3336))) &amp; &quot;-&quot; &amp; LPAD(TEXT(MONTH(DATEVALUE(CreatedDate - 0.3336))), 2, &quot;0&quot;) &amp; &quot;-&quot; &amp; LPAD(TEXT(DAY(DATEVALUE(CreatedDate - 0.3336))), 2, &quot;0&quot;) &amp; &quot; Hour &quot; &amp; LPAD(TEXT(HOUR(TIMEVALUE(CreatedDate - 0.3336))), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Hour of Day</label>
    <type>Text</type>
</CustomField>