force-app/main/default/objects/Selfie__c/fields/Selfie_Image__c.field-meta.xml
<CustomField>
    <fullName>Selfie_Image__c</fullName>
    <formula>IMAGE( URL__c , &quot;selfie image&quot;, 200, 100)</formula>
    <label>Selfie Image</label>
    <type>Text</type>
</CustomField>