force-app/main/default/objects/Selfie__c/fields/Upload_ID__c.field-meta.xml
<CustomField>
    <fullName>Upload_ID__c</fullName>
    <externalId>true</externalId>
    <label>Upload ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>