force-app/main/default/objects/Selfie__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Selfie_Image__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Selfies</label>
</ListView>